log/build_2024-06-12_23-18-58/cube_localizer/stdout_stderr.log
running egg_info
writing ../../build/cube_localizer/cube_localizer.egg-info/PKG-INFO
writing dependency_links to ../../build/cube_localizer/cube_localizer.egg-info/dependency_links.txt
writing entry points to ../../build/cube_localizer/cube_localizer.egg-info/entry_points.txt
writing requirements to ../../build/cube_localizer/cube_localizer.egg-info/requires.txt
writing top-level names to ../../build/cube_localizer/cube_localizer.egg-info/top_level.txt
reading manifest file '../../build/cube_localizer/cube_localizer.egg-info/SOURCES.txt'
writing manifest file '../../build/cube_localizer/cube_localizer.egg-info/SOURCES.txt'
running build
running build_py
copying cube_localizer/cube_localizer.py -> /home/jg/ros_rlr/build/cube_localizer/build/lib/cube_localizer
running install
running install_lib
copying /home/jg/ros_rlr/build/cube_localizer/build/lib/cube_localizer/cube_localizer.py -> /home/jg/ros_rlr/install/cube_localizer/lib/python3.10/site-packages/cube_localizer
byte-compiling /home/jg/ros_rlr/install/cube_localizer/lib/python3.10/site-packages/cube_localizer/cube_localizer.py to cube_localizer.cpython-310.pyc
running install_data
  File "/home/jg/ros_rlr/install/cube_localizer/lib/python3.10/site-packages/cube_localizer/cube_localizer.py", line 6
    from tf2_ros import *tf*transformations
                         ^^
SyntaxError: invalid syntax

running install_egg_info
removing '/home/jg/ros_rlr/install/cube_localizer/lib/python3.10/site-packages/cube_localizer-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/cube_localizer/cube_localizer.egg-info to /home/jg/ros_rlr/install/cube_localizer/lib/python3.10/site-packages/cube_localizer-0.0.0-py3.10.egg-info
running install_scripts
Installing cube_localizer script to /home/jg/ros_rlr/install/cube_localizer/lib/cube_localizer
writing list of installed files to '/home/jg/ros_rlr/build/cube_localizer/install.log'
